--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -18,9 +18,13 @@
     <meta property="og:title" content="Indiraa & Nisshanth Marriage Hall Expenses">
     <meta property="og:description" content="A summary of wedding expenses for Indiraa and Nisshanth's marriage hall.">
     <meta property="og:image" content="https://indiraa-hall-expense.netlify.app/images/social-preview.png">
+    <meta property="og:image:secure_url" content="https://indiraa-hall-expense.netlify.app/images/social-preview.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1024">
+    <meta property="og:image:height" content="1024">
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://indiraa-hall-expense.netlify.app/">
     <meta property="twitter:title" content="Indiraa & Nisshanth Marriage Hall Expenses">
     <meta property="twitter:description" content="A summary of wedding expenses for Indiraa and Nisshanth's marriage hall.">
